src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Generico</fullName>
        <description>Generico</description>
        <isActive>true</isActive>
        <values>
            <fullName>10</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>20</fullName>
        </values>
        <values>
            <fullName>30</fullName>
        </values>
        <values>
            <fullName>40</fullName>
        </values>
        <values>
            <fullName>99</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>BarCode__c</fullName>
        <formula>IMAGE(&quot;http://www.barcodesinc.com/generator/image.php?code=&quot;+Codice_RMA__c+&quot;&amp;style=325&amp;type=C128B&amp;width=200&amp;height=50&amp;xres=1&amp;font=3&quot; ,&quot;Barcode&quot;)</formula>
        <label>BarCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categoria__c</fullName>
        <label>Categoria</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>130</fullName>
                </value>
                <value>
                    <fullName>140</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>160</fullName>
                </value>
                <value>
                    <fullName>170</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>190</fullName>
                </value>
                <value>
                    <fullName>210</fullName>
                </value>
                <value>
                    <fullName>220</fullName>
                </value>
                <value>
                    <fullName>230</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>310</fullName>
                </value>
                <value>
                    <fullName>320</fullName>
                </value>
                <value>
                    <fullName>330</fullName>
                </value>
                <value>
                    <fullName>340</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Codice_Garanzia__c</fullName>
        <label>Codice Garanzia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Prodotto__c</fullName>
        <label>Codice Prodotto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_RMA__c</fullName>
        <label>Codice RMA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corriere__c</fullName>
        <label>Corriere</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DHL</fullName>
                </value>
                <value>
                    <fullName>SDA</fullName>
                </value>
                <value>
                    <fullName>EXPRESS</fullName>
                </value>
                <value>
                    <fullName>BRT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Danno_Accidentale__c</fullName>
        <label>Danno Accidentale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Consegna__c</fullName>
        <label>Data Consegna</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Documento__c</fullName>
        <label>Data Documento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Inserimento__c</fullName>
        <label>Data Inserimento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Ricevimento_Merce__c</fullName>
        <label>Data Ricevimento Merce</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Descrizione__c</fullName>
        <label>Descrizione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dettaglio__c</fullName>
        <label>Dettaglio</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Categoria__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>141</fullName>
                </value>
                <value>
                    <fullName>111</fullName>
                </value>
                <value>
                    <fullName>112</fullName>
                </value>
                <value>
                    <fullName>113</fullName>
                </value>
                <value>
                    <fullName>114</fullName>
                </value>
                <value>
                    <fullName>221</fullName>
                </value>
                <value>
                    <fullName>117</fullName>
                </value>
                <value>
                    <fullName>241</fullName>
                </value>
                <value>
                    <fullName>115</fullName>
                </value>
                <value>
                    <fullName>116</fullName>
                </value>
                <value>
                    <fullName>231</fullName>
                </value>
                <value>
                    <fullName>232</fullName>
                </value>
                <value>
                    <fullName>191</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>410</fullName>
                </value>
                <value>
                    <fullName>420</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Difetto__c</fullName>
        <label>Difetto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documento_N__c</fullName>
        <label>Documento N.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Inviata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Inviata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fine_Garanzia__c</fullName>
        <description>End Date</description>
        <label>Fine Garanzia</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fornitore__c</fullName>
        <label>Fornitore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Garanzia_Internazionale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Garanzia Internazionale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Genera_RMA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Genera RMA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IdNegozio__c</fullName>
        <label>IdNegozio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importo_Fattura_a_Corriere__c</fullName>
        <label>Importo Fattura a Corriere</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inizio_Garanzia_Legale__c</fullName>
        <label>Inizio Garanzia Legale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Intervento_non_ancora_fatturato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intervento non ancora fatturato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marca__c</fullName>
        <label>Marca</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matricola__c</fullName>
        <label>Matricola</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Messaggio_di_Errore__c</fullName>
        <description>Error message on display in elettronic device.</description>
        <label>Messaggio di Errore</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E01</fullName>
                </value>
                <value>
                    <fullName>E105</fullName>
                </value>
                <value>
                    <fullName>E404</fullName>
                </value>
                <value>
                    <fullName>ABORT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_Rifiuto__c</fullName>
        <label>Motivo Rifiuto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anomalia non rilevata allo scarico</fullName>
                </value>
                <value>
                    <fullName>Mancanza riserva specifica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_di_Contatto__c</fullName>
        <description>Motivo di Contatto</description>
        <label>Motivo di Contatto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>41</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nome_Contatto__c</fullName>
        <formula>Contact.FirstName +&quot; &quot;+ Contact.LastName</formula>
        <label>Nome Contatto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Interne__c</fullName>
        <label>Note Interne</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Numero_Case__c</fullName>
        <formula>Hyperlink(&quot;https://unieuro--dev1.cs83.my.salesforce.com/&quot; &amp;Id , &quot;Dettaglio&quot;)</formula>
        <label>Numero Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Fattura__c</fullName>
        <label>Numero Fattura</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Prenotazione__c</fullName>
        <label>Numero Prenotazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordine__c</fullName>
        <formula>Order__r.OrderNumber</formula>
        <label>Ordine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origine__c</fullName>
        <label>Origine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pagamento__c</fullName>
        <label>Pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bonifico</fullName>
                </value>
                <value>
                    <fullName>Poste Pay</fullName>
                </value>
                <value>
                    <fullName>Contanti</fullName>
                </value>
                <value>
                    <fullName>Buoni Acquisto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partita_Iva__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partita Iva</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percentuale_Buono__c</fullName>
        <label>Percentuale Buono</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentuale_Copertura__c</fullName>
        <label>Percentuale Copertura</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Persona_da_Contattare__c</fullName>
        <formula>Contact.LastName</formula>
        <label>Persona da Contattare</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Possesso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possesso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pratica_Corriere__c</fullName>
        <label>Pratica Corriere</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preventivo__c</fullName>
        <label>Preventivo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prezzo_Prodotto__c</fullName>
        <label>Prezzo Prodotto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prodotto__c</fullName>
        <formula>Product.Name</formula>
        <label>Prodotto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prodotto_dell_ordine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>campo utile a selezionare la riga d&apos;ordine</description>
        <label>Prodotto dell&apos;ordine</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>OrderItem.Order.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Order__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Protocollo__c</fullName>
        <label>Protocollo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Punto_Vendita__c</fullName>
        <formula>Account.Punto_Vendita__c</formula>
        <label>Punto Vendita</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Punto_Vendita_di_Origine__c</fullName>
        <label>Punto Vendita di Origine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantita_Ricevute__c</fullName>
        <label>Quantita Ricevute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minore da quanto richiesto</fullName>
                </value>
                <value>
                    <fullName>Maggiore quanto richiesto</fullName>
                </value>
                <value>
                    <fullName>Niente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Accredito__c</fullName>
        <label>Accredito</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RMA_All_attenzione_di__c</fullName>
        <formula>Owner:User.LastName</formula>
        <label>All&apos;attenzione di</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Causale__c</fullName>
        <label>Causale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1° Causale</fullName>
                </value>
                <value>
                    <fullName>2° Causale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Codice_CAT__c</fullName>
        <label>Codice CAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Codice_Fornitore__c</fullName>
        <label>Codice Fornitore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Codice_Unieuro__c</fullName>
        <label>Codice Unieuro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Data_Entrata__c</fullName>
        <label>Data Entrata</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA_Data_Invio_CAT__c</fullName>
        <label>Data Invio CAT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA_Data_RMA__c</fullName>
        <label>Data RMA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RMA_Data_Rientro_CAT__c</fullName>
        <label>Data Rientro CAT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA_Data_Scontrino__c</fullName>
        <label>Data Scontrino</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA_Data_Uscita__c</fullName>
        <label>Data Uscita</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA_Date_DDF__c</fullName>
        <label>Date DDT/FF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA_Descrizione_Articolo__c</fullName>
        <label>Descrizione Articolo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Dettaglio_Problema__c</fullName>
        <label>Dettaglio Problema</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Fornitore__c</fullName>
        <label>RMA Fornitore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Genere_Problema__c</fullName>
        <label>Genere Problema</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>primo</fullName>
                </value>
                <value>
                    <fullName>secondo</fullName>
                </value>
                <value>
                    <fullName>terzo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Giacenza__c</fullName>
        <label>Giacenza</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Invio_CAT__c</fullName>
        <label>Invio CAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Materiale_Diffettoso__c</fullName>
        <label>Materiale Difettoso</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Note_Gestione__c</fullName>
        <label>Note Gestione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Note_INTERNE_SGM__c</fullName>
        <label>Note INTERNE SGM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Note_SGM__c</fullName>
        <label>Note SGM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Notifiche_Cliente__c</fullName>
        <label>Notifiche Cliente</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RMA_Numero_RMA_PdV__c</fullName>
        <label>Numero RMA Pdv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMA_Numero_RMA_Web__c</fullName>
        <label>Numero RMA Web</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMA_Persona_di_Riferimento__c</fullName>
        <formula>Owner:User.LastName</formula>
        <label>Persona di Riferimento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Precodice__c</fullName>
        <label>Precodice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Quantita__c</fullName>
        <label>Quantita</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMA_Richiedente__c</fullName>
        <label>Richiedente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Rientro_CAT__c</fullName>
        <label>Rientro CAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Stato_Gestione_RMA__c</fullName>
        <label>Stato Gestione RMA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Stato_Richiesta_RMA__c</fullName>
        <label>Stato Richiesta RMA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Uscita__c</fullName>
        <label>Uscita</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Richiedi_Preventivo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Richiedi Preventivo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Riparatore__c</fullName>
        <label>Riparatore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Riserva_Corriere__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Riserva Corriere</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ritiro_Presso__c</fullName>
        <formula>Contact.Indirizzo__c</formula>
        <label>Ritiro Presso</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scambio_Prodotto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scambio Prodotto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shop_Online__c</fullName>
        <label>Shop Online</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Negozio</fullName>
                </value>
                <value>
                    <fullName>In Cassa</fullName>
                </value>
                <value>
                    <fullName>A Casa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spedizioniere__c</fullName>
        <label>Spedizioniere</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatoHelper__c</fullName>
        <label>StatoHelper</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stato_Contestazione__c</fullName>
        <label>Stato Contestazione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stato_Intervento__c</fullName>
        <label>Stato Intervento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stato_Pratica__c</fullName>
        <label>Stato Pratica</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>211</fullName>
                </value>
                <value>
                    <fullName>212</fullName>
                </value>
                <value>
                    <fullName>213</fullName>
                </value>
                <value>
                    <fullName>2120</fullName>
                </value>
                <value>
                    <fullName>2121</fullName>
                </value>
                <value>
                    <fullName>2122</fullName>
                </value>
                <value>
                    <fullName>2123</fullName>
                </value>
                <value>
                    <fullName>2124</fullName>
                </value>
                <value>
                    <fullName>2125</fullName>
                </value>
                <value>
                    <fullName>2126</fullName>
                </value>
                <value>
                    <fullName>2127</fullName>
                </value>
                <value>
                    <fullName>2128</fullName>
                </value>
                <value>
                    <fullName>2129</fullName>
                </value>
                <value>
                    <fullName>2130</fullName>
                </value>
                <value>
                    <fullName>2131</fullName>
                </value>
                <value>
                    <fullName>2132</fullName>
                </value>
                <value>
                    <fullName>2133</fullName>
                </value>
                <value>
                    <fullName>2134</fullName>
                </value>
                <value>
                    <fullName>2135</fullName>
                </value>
                <value>
                    <fullName>2136</fullName>
                </value>
                <value>
                    <fullName>2137</fullName>
                </value>
                <value>
                    <fullName>2110</fullName>
                </value>
                <value>
                    <fullName>2111</fullName>
                </value>
                <value>
                    <fullName>2112</fullName>
                </value>
                <value>
                    <fullName>2113</fullName>
                </value>
                <value>
                    <fullName>2114</fullName>
                </value>
                <value>
                    <fullName>2115</fullName>
                </value>
                <value>
                    <fullName>2116</fullName>
                </value>
                <value>
                    <fullName>2117</fullName>
                </value>
                <value>
                    <fullName>2118</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stato_Tracking__c</fullName>
        <label>Stato Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>